<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/component_super_ultra"
        android:fontFamily="@font/majallab"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/component_super_ultra"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/login_tnc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tnc"
        android:textSize="@dimen/component_extra_big"
        android:fontFamily="@font/majallab"
        android:textColor="@color/grey_300"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/component_medium_small"
        android:layout_marginHorizontal="@dimen/component_icon"
        app:layout_constraintTop_toBottomOf="@id/login_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        app:startIconDrawable="@drawable/ic_mail"
        app:startIconContentDescription="@string/mail"
        android:textColorHint="@color/grey_300"
        app:startIconTint="@color/grey_300"
        app:boxStrokeColor="@color/grey_300"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/login_tnc"
        android:layout_marginHorizontal="@dimen/component_huge"
        android:layout_marginTop="@dimen/component_special">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/component_extra"
            android:fontFamily="@font/majallab"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconContentDescription="@string/mail"
        android:textColorHint="@color/grey_300"
        app:startIconTint="@color/grey_300"
        app:boxStrokeColor="@color/grey_300"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/layout_email"
        android:layout_marginHorizontal="@dimen/component_huge"
        android:layout_marginTop="@dimen/component_normal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="@dimen/component_extra"
            android:fontFamily="@font/majallab"/>

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cb_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_password"
        app:layout_constraintStart_toStartOf="@id/layout_password"
        android:layout_marginTop="@dimen/component_small"
        android:text="@string/remember_password"
        android:textColor="@color/grey_300"
        android:textSize="@dimen/component_extra"
        android:fontFamily="@font/majallab" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/blue_300"
        android:textSize="@dimen/component_extra"
        android:fontFamily="@font/majallab"
        app:layout_constraintTop_toTopOf="@id/cb_login"
        app:layout_constraintBottom_toBottomOf="@id/cb_login"
        app:layout_constraintEnd_toEndOf="@id/layout_password"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/component_huge"
        android:layout_marginHorizontal="@dimen/component_super_ultra"
        android:layout_marginBottom="@dimen/component_sizeable"
        android:background="@drawable/background_radius_10"
        android:fontFamily="@font/majallab"
        android:text="@string/login"
        android:textSize="@dimen/component_extra_big"
        android:textAllCaps="false"
        app:backgroundTint="@color/blue_300"
        tools:layout_editor_absoluteX="24dp"
        app:layout_constraintTop_toBottomOf="@id/cb_login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/component_extra">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textColor="@color/grey_300"
            android:textSize="@dimen/component_extra"
            android:fontFamily="@font/majallab" />

        <TextView
            android:id="@+id/btn_login_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="@dimen/component_extra"
            android:fontFamily="@font/majallab"
            android:textColor="@color/blue_300"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/background_auth"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="-1dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>